# UnitsTalk

./: .gitmodules  Readme.md
Examples/: AudioParameterUnit.h  Decibels.cpp  ExampleADSR.h  Filters.h  Parameters.h  Readme.md  Readme.txt  Time.cpp
Units FM Synth/: Readme.md  Units FM Synth.jucer
Units FM Synth/JuceLibraryCode/: AppConfig.h  JuceHeader.h  audioplugin_Units FM Synth_UnityScript.cs
Units FM Synth/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Units FM Synth/Source/DSP/: DSPUnitUtilities.h  Interpolation.h  Oscillator.h  SmoothedValueBuffer.h  Synth.h
Units FM Synth/Source/GUI/: Indicator.h  Knobs.h  LookAndFeel.h  TabbedContainers.h
Units FM Synth/Source/Utilities/: MidiMPESeparator.h
Units FM Synth/Tests/: CMakeLists.txt  DSPTests.cpp  DSPUnitUtilities.cpp  MIDIMPESeparatorTests.cpp  ParameterTests.cpp  TestMain.cpp
